# ChangeLog for dev-perl/Net-Daemon
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.60 2011/02/22 07:45:37 tove Exp $

*Net-Daemon-0.450 (22 Feb 2011)

  22 Feb 2011; Torsten Veller <tove@gentoo.org> +Net-Daemon-0.450.ebuild:
  Version bump

  21 Jan 2010; Torsten Veller <tove@gentoo.org> Net-Daemon-0.43.ebuild:
  Ebuild maintenance. EAPI=2. mips -> ~mips

  10 Jan 2010; Fabian Groffen <grobian@gentoo.org> Net-Daemon-0.43.ebuild:
  Transfer Prefix keywords

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -Net-Daemon-0.39.ebuild:
  Cleanup

  29 Jun 2009; Jeroen Roovers <jer@gentoo.org> Net-Daemon-0.43.ebuild:
  Stable for HPPA too.

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Net-Daemon-0.38.ebuild,
  -Net-Daemon-0.41.ebuild:
  Cleanup

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> Net-Daemon-0.43.ebuild:
  keyword ~sparc-fbsd

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Net-Daemon-0.43.ebuild:
  amd64 stable

  06 Oct 2007; Tom Gall <tgall@gentoo.org> Net-Daemon-0.43.ebuild:
  stable on ppc64

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Net-Daemon-0.43.ebuild:
  Stable on ppc.

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Net-Daemon-0.43.ebuild:
  Stable on sparc

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org> Net-Daemon-0.43.ebuild:
  Stable on mips.

  29 Jul 2007; Raúl Porcel <armin76@gentoo.org> Net-Daemon-0.43.ebuild:
  alpha/ia64/x86 stable

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> Net-Daemon-0.41.ebuild:
  alpha/ia64/x86 stable

  07 Jul 2007; Tom Gall <tgall@gentoo.org> Net-Daemon-0.41.ebuild:
  stable on ppc64

  30 Jun 2007; Joshua Kinard <kumba@gentoo.org> Net-Daemon-0.41.ebuild:
  Stable on mips.

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Net-Daemon-0.41.ebuild:
  Marking sparc stable

*Net-Daemon-0.43 (25 Jun 2007)

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Net-Daemon-0.43.ebuild: