@@ -1,0 +1,15 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Daemon/Attic/Net-Daemon-0.460.ebuild,v 1.1 2011/02/23 07:22:55 tove Exp $
+
+EAPI=3
+
+MODULE_AUTHOR=MNOONING
+MODULE_VERSION=0.46
+inherit perl-module
+
+DESCRIPTION="Abstract base class for portable servers"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris"
+IUSE=""
