@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Net-Daemon
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.60 2011/02/22 07:45:37 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Daemon/ChangeLog,v 1.61 2011/02/23 07:22:55 tove Exp $
+
+*Net-Daemon-0.460 (23 Feb 2011)
+
+  23 Feb 2011; Torsten Veller <tove@gentoo.org> +Net-Daemon-0.460.ebuild:
+  Version bump
 
 *Net-Daemon-0.450 (22 Feb 2011)
 
